Don't show drag option for coarse pointers, fix tutorial spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -569,6 +569,7 @@ button {
 
   #drawer & {
     bottom: 100%;
+    right: 0;
   }
   
   #area-left &, #area-left-inner & {
